# metal-cmake

./: .gitmodules  CMakeLists.txt  README.md  library.metal  metal.m
